第三次提交 1. 完成历史记录及无痕浏览功能 2. 新增导出网页为图片功能 3. 完成自定义浏览器标识功能 4. 完成二维码扫描及结果处理功能 5. 新增长按网页超链接和长按网页图片弹窗 6. 新增响应网站跳转、下载、打开/关闭窗口的用户确认 7. 完成全屏播放网页视频功能 8. 新增FloatingActionMenu/Button滑动控制隐藏/显示功能 9. 新增查找网页内容功能 10. 新增响应外部调起浏览器功能 11. 优化网页深色模式及轻微拦截广告性能 12. 新增长按主页悬浮按钮跳转到网页顶部功能 13. 更换浏览器logo及icon 14. 其他若干优化调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,32 @@
     <string name="export">导出</string>
     <string name="ua">标识</string>
     <string name="multiple_page">多窗口切换</string>
+    <string name="picture">图片</string>
+    <string name="pdf">PDF</string>
+    <string name="qr_result">扫描结果</string>
+    <string name="copy">复制结果</string>
+    <string name="search_open">打开/搜索</string>
+    <string name="current_page">当前窗口</string>
+    <string name="new_page_fore">前台新窗口</string>
+    <string name="new_page_back">后台新窗口</string>
+    <string name="dismiss_qr_content_dialog">关闭弹窗</string>
+    <string name="copy_cancel">复制/取消</string>
+    <string name="browser_ua">浏览器标识</string>
+    <string name="apply">应用</string>
+    <string name="reset">恢复默认</string>
+    <string name="cancel">取消</string>
+    <string name="custom_ua">自定义浏览器标识</string>
+    <string name="built_in_ua">内置浏览器标识</string>
+    <string name="kua_ua">夸克(轻微屏蔽广告)</string>
+    <string name="simple_ua">简单搜索(屏蔽百度系广告)</string>
+    <string name="we_ua">微信(部分网站仅支持微信且可屏蔽部分广告)</string>
+    <string name="ie_ua">IE 10(部分网站仅支持IE访问)</string>
+    <string name="symbain_ua">塞班(某些网站可无需客户端下载)</string>
+    <string name="copy_anc">复制链接地址</string>
+    <string name="new_page_fore_open">前台新窗口打开</string>
+    <string name="new_page_back_open">后台新窗口打开</string>
+    <string name="show_img">查看图片</string>
+    <string name="save_img">保存图片</string>
+    <string name="history_">历史记录</string>
+    <string name="find_hint">在这里输入查找内容</string>
 </resources>
