第四次提交 1. 完成书签及主页快捷方式功能，支持拖动排序 2. 完成设置及其中各项功能 3. 完成首次需求各项功能开发 4. 完成广告接入 5. 其他若干优化调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="built_in_ua">内置浏览器标识</string>
     <string name="kua_ua">夸克(轻微屏蔽广告)</string>
     <string name="simple_ua">简单搜索(屏蔽百度系广告)</string>
-    <string name="we_ua">微信(部分网站仅支持微信且可屏蔽部分广告)</string>
+    <string name="we_ua">微信(部分网站仅支持微信访问)</string>
     <string name="ie_ua">IE 10(部分网站仅支持IE访问)</string>
     <string name="symbain_ua">塞班(某些网站可无需客户端下载)</string>
     <string name="copy_anc">复制链接地址</string>
@@ -45,4 +45,47 @@
     <string name="save_img">保存图片</string>
     <string name="history_">历史记录</string>
     <string name="find_hint">在这里输入查找内容</string>
+    <string name="rule">常规</string>
+    <string name="engine">搜索引擎</string>
+    <string name="toolbar_content">顶栏内容</string>
+    <string name="data_clear">清除数据</string>
+    <string name="dark_mode_follow_system">深色模式跟随系统</string>
+    <string name="opera">操作</string>
+    <string name="drop_reload">下拉刷新</string>
+    <string name="key_ctrl">音量键翻页</string>
+    <string name="high">高级</string>
+    <string name="javascript">启用JavaScript</string>
+    <string name="recovery">启动时恢复未关闭页面</string>
+    <string name="support">支持作者</string>
+    <string name="myhdg">\@MyHdg</string>
+    <string name="about">关于BIJOU</string>
+    <string name="version">2.0</string>
+    <string name="title">标题</string>
+    <string name="website">网址</string>
+    <string name="domain">域名</string>
+    <string name="baidu">百度</string>
+    <string name="bing">必应</string>
+    <string name="sm">神马</string>
+    <string name="custom">自定义</string>
+    <string name="home_page">主页</string>
+    <string name="google">谷歌</string>
+    <string name="input_engine">自定义搜索引擎并按回车键确认</string>
+    <string name="default_home">默认</string>
+    <string name="input_home">自定义主页并按回车键确认</string>
+    <string name="clear_cache">清理缓存</string>
+    <string name="clear_form">清理表单</string>
+    <string name="clear_history">清空历史</string>
+    <string name="auto_clear">打开开关即可每次退出时自动清理(注意：主动杀死进程不生效)</string>
+    <string name="version_code">当前版本：</string>
+    <string name="check_update">检查更新</string>
+    <string name="bijou_2_open">BIJOU 2 开源地址</string>
+    <string name="bijou_2_open_source">https://github.com/MyHdg0601/BIJOU</string>
+    <string name="bijou_1_5_open">BIJOU 1.5 开源地址</string>
+    <string name="bijou_1_5_open_source">https://gitee.com/MyHdg/browser</string>
+    <string name="other_open">BIJOU 所涉及的开源项目在开源地址中均有提及</string>
+    <string name="add">添加</string>
+    <string name="input_bookmark_title">输入书签标题</string>
+    <string name="input_bokkmark_site">输入书签网址</string>
+    <string name="ad">广告</string>
+    <string name="ad_loading">广告正在加载 ...</string>
 </resources>
