第五次提交 1. 新增下载功能 2. 修复删除多窗口引起的BUG 3. 修复无标题网站或无法获取网址引起的闪退 4. 调整下拉刷新灵敏度 5. 调整启动时间

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="support">支持作者</string>
     <string name="myhdg">\@MyHdg</string>
     <string name="about">关于BIJOU</string>
-    <string name="version">2.0</string>
+    <string name="version">2.1</string>
     <string name="title">标题</string>
     <string name="website">网址</string>
     <string name="domain">域名</string>
@@ -87,5 +87,11 @@
     <string name="input_bookmark_title">输入书签标题</string>
     <string name="input_bokkmark_site">输入书签网址</string>
     <string name="ad">广告</string>
-    <string name="ad_loading">广告正在加载 ...</string>
+    <string name="ad_loading">广告正在加载 …</string>
+    <string name="regex" formatted="false"><![CDATA[[\\n`~!@#$%^&*()+=|{}\':;\',\\\\[\\\\]<>/?~！@#￥%……&*（）——+|{}【】‘；：”“’。， 、？]]]></string>
+    <string name="file_name">文件名</string>
+    <string name="dl_url">地址</string>
+    <string name="input_file_name">输入文件名</string>
+    <string name="input_dl_url">输入下载地址</string>
+    <string name="file_name_notice">检查文件名，若文件名自动获取有误，请手动更改</string>
 </resources>
